fix: front --> horizontal scrolling nav contentbar

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -436,8 +436,15 @@ nav {
   .container {
     padding: 0;
   }
+
   .content-bar---wrapper {
+    overflow-x: hidden;
     margin: 0 -8px;
+    touch-action: pan-y;
+  }
+  .content-bar---wrapper .content-bar---inner {
+    overflow-x: hidden;
+    touch-action: pan-y;
   }
   .content-bar---item a {
     display: flex;
@@ -4907,7 +4914,7 @@ nav {
   }
 
   .content-bar .content-bar---wrapper .content-bar---inner {
-    overflow-x: scroll;
+    overflow-x: hidden;
     height: 70px;
   }
 
@@ -4925,7 +4932,7 @@ nav {
   }
   .content-bar .content-bar---inner {
     height: 60px;
-    overflow-x: scroll;
+    overflow-x: hidden;
   }
   .content-bar---overlay {
     width: 70px;
